--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,6 @@
 @import 'tailwindcss';
+html,
+body {
+	font-family: 'SF Pro Rounded', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+		Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
